[gd_scene load_steps=2 format=3 uid="uid://duxh41trfd0ec"]

[ext_resource type="Script" path="res://src/UI/Body/Scripts/texts_docker.gd" id="1_n0o38"]

[node name="KEY_TEXTS" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_n0o38")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_TEXT"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
wrap_mode = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_TEXT_LIST"

[node name="TextItemList" type="ItemList" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[connection signal="text_changed" from="ScrollContainer/MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="item_selected" from="ScrollContainer/MarginContainer/VBoxContainer/TextItemList" to="." method="_on_text_item_list_item_selected"]
